swap right meta and right alt, map ctrl on caps lock
This update swap the right meta key (command) and the right alt key (options), it also change caps lock to control key.

--- a/config.yml
+++ b/config.yml
@@ -7,10 +7,11 @@ modmap:
 #    application:
 #      not: [gnome-terminal-server, org.gnome.Console]
     remap:
+      CapsLock: LeftMeta
       LeftCtrl: LeftMeta
       LeftMeta: LeftCtrl
-      RightCtrl: RightMeta
-      RightMeta: RightCtrl
+      RightMeta: RightAlt
+      RightAlt: RightMeta
 # `keymap` section
 # For remapping a sequence of key combinations to another sequence of key combinations
 keymap:
